--- a/Data-visualization/data-visualization.ipynb
+++ b/Data-visualization/data-visualization.ipynb
@@ -648,7 +648,7 @@
    ],
    "source": [
     "#%pip install --quiet scipy\n",
-    "#if you dont have scipy"
+    "#if you dont have scipy\n"
    ]
   }
  ],
